# ToooDo

./: .gitignore  CMakeLists.txt  README.md  index.py  main.py  mainwindow.py  quickadd.py  taskitem.py  taskmanager.py  trayicon.py  traymenu.py
src/: main.cpp  mainwindow.py  quickadd.py  tooodo.desktop  trayicon.py
src/libs/: relativedates.cpp  relativedates.h
src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/quickadd/: quickadd.cpp  quickadd.h  quickadd.ui
src/svgmanager/: svgmanager.cpp  svgmanager.h
src/taskitem/: taskitem.cpp  taskitem.h  taskitem.ui
src/taskmanager/: taskmanager.cpp  taskmanager.h
